--- a/JokesApp/package.json
+++ b/JokesApp/package.json
@@ -23,8 +23,12 @@
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.8",
     "expo-web-browser": "~14.1.6",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.1.0",
+    "i18next-http-backend": "^3.0.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-i18next": "^15.5.2",
     "react-native": "0.79.3",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -33,7 +37,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/i18next": "^13.0.0",
     "@types/react": "~19.0.10",
+    "@types/react-i18next": "^8.1.0",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.6",
     "react-test-renderer": "19.0.0",
